[tool.poetry]
name = "rage"
version = "1.3.0"
description = "AI"
authors = ["Azamat Murdalov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.9.1"
pyaudio = "^0.2.13"
pygame = "^2.1.2"
sqlalchemy = "^1.4.45"
vosk = "0.3.44"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
